--- a/MasterPage.master
+++ b/MasterPage.master
@@ -32,13 +32,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-    
-          </button>
+          
           <a class="navbar-brand" href="#">Password Manager</a>
         </div>
         <div class="collapse navbar-collapse">
@@ -75,12 +69,9 @@
     
          </div>
 
-    </div><!-- /.container -->
+    </div>
 
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <div id="bottom"> Powered by Nicolas Foulon and Sven Nyffenegger. </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
 
