--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,27 +1,19 @@
 ﻿body {
   padding-top: 50px;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #eee;
+  
 }
 .starter-template {
   padding: 40px 15px;
   text-align: center;
 }
 
-
-#left
-{  
-    position: relative;
-    width:50%;
-    float:left;
-    background-color:50%;
-    float:left;
-    text-align:left;
-       
+body {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #eee;
 }
-    
-.form-signin .form-group {
+
+.form-signin {
   max-width: 330px;
   padding: 15px;
   margin: 0 auto;
@@ -56,12 +48,7 @@
   border-top-right-radius: 0;
 }
 
-input
-{
-    width:100px;
-   
-    left:25%;
-}
+
 
 
 #form-contact 
@@ -72,3 +59,58 @@ input
      left:25%;
 }
 
+
+#bottom 
+{
+    position:absolute;
+    height : 3%;
+    width : 100%;
+    top : 97%;
+    background-color:#CECECE;
+    text-align:center;
+}
+
+
+
+#left
+{  
+    position: relative;
+    width:40%;
+    float:left;
+    
+ 
+ 
+    text-align:left;
+    height : 500px;
+       
+}
+
+#right
+{
+    position : relative;
+    width : 40%;
+    float :right;
+   
+}
+ 
+ 
+#avatar 
+{
+    position :relative;
+    float :left;
+    height : 150px;
+    
+    width : 120px;
+}
+
+#contentnextavatar 
+{
+    position :relative;
+    
+    float :right;
+}
+
+h4.monoline
+{
+ text-align :justify;   
+}
